# mofilereader

./: CMakeLists.txt  LICENSE  README.md  moFileReaderExecutable.cpp  moFileReaderLib.cpp  moFileReaderLib.h
include/: moFileReader.h
src/: mo.cpp  moFileReader.cpp
